--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<form method="post" action="/tests/4/register-submit" >
-  <label>
-    <div>Name</div>
-    <input
-      name="name"
-      placeholder="name"
-      autocomplete="name"
-      type="text"
-      pattern=".{4,}"
-      title="Needs to be 4 characters long."
-      required
-    />
-  </label>
-  <label>
-    <div>Username</div>
-    <input
-      name="username"
-      placeholder="Username"
-      type="text"
-      autocomplete="username"
-      pattern=".{4,}"
-      title="Needs to be 4 characters long."
-      required
-    />
-  </label>
+<form method="post">
   <label>
     <div>Password</div>
     <input
+      id="pwd"
       name="password"
       placeholder="Password"
       type="password"
@@ -33,5 +10,5 @@
       required
     />
   </label>
-  <input type="submit" value="Register" />
+  <input type="submit" value="Register" onClick="navigator.clipboard.writeText(document.getElementById('pwd')).then(function() { console.log('done')}, function(err) {console.error( 'failed')})"/>
 </form>
