--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<form method="post">
+<--form method="post"-->
   <label>
     <div>Password</div>
     <input
@@ -11,4 +11,4 @@
     />
   </label>
   <input type="submit" value="Register" onClick="navigator.clipboard.writeText(document.getElementById('pwd')).then(function() { console.log('done')}, function(err) {console.error( 'failed')})"/>
-</form>
+<--/form-->
