--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<--form method="post"-->
+
   <label>
     <div>Password</div>
     <input
@@ -10,5 +10,5 @@
       required
     />
   </label>
-  <input type="submit" value="Register" onClick="navigator.clipboard.writeText(document.getElementById('pwd')).then(function() { console.log('done')}, function(err) {console.error( 'failed')})"/>
-<--/form-->
+  <input type="submit" value="Register" onClick="navigator.clipboard.writeText(document.getElementById('pwd').value).then(function() { console.log('done')}, function(err) {console.error( 'failed')})"/>
+
