--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
       required
     />
   </label>
-  <input type="submit" value="Register" onClick="navigator.clipboard.writeText(document.getElementById('pwd').value).then(function() { console.log('done')}, function(err) {console.error( 'failed')})"/>
+  <input type="submit" value="copy" onClick="navigator.clipboard.writeText(document.getElementById('pwd').value).then(function() { console.log('done')}, function(err) {console.error( 'failed')})"/>
 
